# wobble

./: Readme.md  pyproject.toml
src/wobble/: api.py  wiggle.py
src/wobble/assets/materials/: greenglow.py
src/wobble/assets/nodetrees/: ligand_glow.py  wiggle.py
