[project]
authors = [
    { name = "Zachary Charlop-Powers", email = "zach.charlop.powers@gmail.com" },
]
dependencies = [
    "bpy>=4.2.0,<5",
    "blendersynth>=0.2.5,<0.3",
    "platformdirs>=4.2.2,<5",
]
description = "Add a short description here"
name = "wobble"
requires-python = "==3.11"
version = "0.1.0"

[project.scripts]
protein-animation = "wobble.cli:cli_create_protein_animation"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
wobble = { path = ".", editable = true }
molecularnodes = { git = "https://github.com/BradyAJohnston/MolecularNodes.git" }

[tool.pixi.tasks]
help = "python wobble/api.py --help"
wobble = "python wobble/api.py"
example = "python wobble/api.py 1FAP ."

[tool.pixi.dependencies]
numpy = "<2.0"
ffmpeg-python = "*"
opencv = "*"
click = "*"
