[project]
authors = [
    { name = "Zachary Charlop-Powers", email = "zach.charlop.powers@gmail.com" },
]
dependencies = [
    "bpy>=4.2.0,<5",
    "blendersynth>=0.2.5,<0.3",
    "platformdirs>=4.2.2,<5",
]
description = "Add a short description here"
name = "wobble"
requires-python = "==3.11"
version = "0.1.0"

[project.scripts]
protein-animation = "wobble.api:create_protein_animation"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/wobble"]


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
wobble = { path = ".", editable = true }
molecularnodes = { git = "https://github.com/BradyAJohnston/MolecularNodes.git" }

[tool.pixi.tasks]
build = "hatch build"
install = "pip install ."
help = "python wobble/api.py --help"
wobble = "python wobble/api.py"
example = "python wobble/api.py 1FAP ."
launch = "/Applications/Blender.app/Contents/MacOS/Blender --python-use-system-env "
install-editable = "pip install -e ."

[tool.pixi.dependencies]
numpy = "<2.0"
ffmpeg-python = "*"
opencv = "*"
click = "*"
