[project]
authors = [
    { name = "Zachary Charlop-Powers", email = "zach.charlop.powers@gmail.com" },
]
dependencies = [
    "bpy==4.2.0",
    "blendersynth>=0.2.5,<0.3",
    "platformdirs>=4.3.2,<5",
]
description = "Add a short description here"
name = "wobble"
requires-python = "==3.11"
version = "0.1.0"

[project.scripts]
wobble = "wobble.api:wobble"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/wobble"]


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]


[tool.pixi.pypi-dependencies]
wobble = { path = ".", editable = true }
molecularnodes = { git = "https://github.com/BradyAJohnston/MolecularNodes.git" }


[tool.pixi.tasks]
help = "wobble --help"
example = "wobble  create-protein-animation 1FAP testout --no-render"
example2 = "wobble glowing-ligand 1FAP testout --no-render"
launch = "/Applications/Blender.app/Contents/MacOS/Blender --python-use-system-env "

[tool.pixi.dependencies]
python = "==3.11"
numpy = "<2.0"
ffmpeg-python = "*"
opencv = "*"
click = "*"
